Add local server meta and allow fetch local server logs
