# src/models/local-server.model.ts
@@ -17,6 +17,14 @@ export class LocalServer {
   @Column({ name: 'contact_mail', type: 'varchar', length: 150, nullable: true })
   public contactMail?: string;
 
+  /** The platform OS of the local sever (data received on init) */
+  @Column({ name: 'platform', type: 'varchar', length: 50, nullable: true })
+  public platform?: string;
+
+  /** The local server version */
+  @Column({ name: 'version', type: 'varchar', length: 100, nullable: true })
+  public version?: string;
+
   /** Users from the local server that can access via remote server. */
   @Column({ name: 'valid_users', type: 'varchar', array: true, nullable: false })
   public validUsers: string[];
